# xdg-desktop-portal-liri

./: .gitattributes  .gitignore  .mailmap  .tag.license  .travis.yml  AUTHORS.md  CMakeLists.txt  README.md  xdg-desktop-portal-liri.qbs
.github/workflows/: build.yml  checks.yml
.github/workflows/scripts/: build-deps
.reuse/: dep5
.travis/: build.sh
cmake/: FindLibdrm.cmake  FindPipeWire.cmake
data/: CMakeLists.txt  data.qbs  liri.portal  org.freedesktop.impl.portal.desktop.liri.in  org.freedesktop.impl.portal.desktop.liri.service.in  xdg-desktop-portal-liri.service.in
src/: CMakeLists.txt  accessportal.cpp  accessportal.h  accountportal.cpp  accountportal.h  appchooserportal.cpp  appchooserportal.h  backgroundportal.cpp  backgroundportal.h  desktopportal.cpp  desktopportal.h  emailportal.cpp  emailportal.h  filechooserportal.cpp  filechooserportal.h  inhibitportal.cpp  inhibitportal.h  lockdownportal.cpp  lockdownportal.h  logging.cpp  logging_p.h  main.cpp  notificationportal.cpp  notificationportal.h  printportal.cpp  printportal.h  quickdialog.cpp  quickdialog.h  request.cpp  request.h  resources.qrc  screencastportal.cpp  screencastportal.h  screencaststream.cpp  screencaststream.h  screenshotclient.cpp  screenshotclient.h  screenshotimageprovider.cpp  screenshotimageprovider.h  screenshotportal.cpp  (+10 more)
src/implementation/: appsmodel.cpp  appsmodel.h
src/qml/: AccessDialog.qml  AppChooserDialog.qml  BaseDialog.qml  ScreenshotDialog.qml  UserInfoDialog.qml  WallpaperDialog.qml  main.qml
